website/i18n/de/docusaurus-plugin-content-docs/version-18.0/titan-basics/other-parts-of-the-touch-screen.md
---
id: other-parts-of-the-touch-screen
title: Andere Bereiche der Anzeige
sidebar_label: Andere Bereiche der Anzeige
---

import Keys from '@site/src/components/key.ts';
import Video from '@site/src/components/video.tsx';

## Die Menütasten

Auf der rechten Seite des Touchscreens befindet sich der Menü-Bereich.
Direkt daneben angeordnet sind die Menütasten A-G. Beim Diamond 9 gibt es 
für das Menü extra ein Touch-Display links neben dem rechten Bildschirm. 
(Das Pearl Expert hat dafür extra ein kleines LCD-Display im Pult).

![Titan Touch Screen User Interface](/docs/images/Titan-Touch-Screen-User-Interface.png)

Gibt es mehr Funktionen als in den verfügbaren Platz
passen, so erscheinen Schaltflächen <Keys.SoftKey>Previous</Keys.SoftKey> (zurück) und <Keys.SoftKey>Next</Keys.SoftKey>
(weiter), um durch die Funktionen zu blättern. Man kann jeweils die
Schaltfläche oder die 'richtige' Taste (direkt daneben) benutzen.

Die senkrechte Leiste links neben den Menü-Schaltflächen zeigt den Namen
des aktuellen Menüs. Bei Bedarf lässt sich das gerade aktive Menü
einrasten (so dass es nicht laufend wieder angewählt werden muss); dazu
dient die Taste <Keys.HardKey>Menu Latch</Keys.HardKey> (auf dem Pearl Expert und dem alten Tiger
Touch die Taste <Keys.HardKey>ML Menu</Keys.HardKey>). Die senkrechte Leiste neben den Buttons
wird rot, sobald ein Menü eingerastet ist. Das ist z.B. sinnvoll, wenn 
viele einzelne Playbacks oder Paletten kopiert oder verschoben werden 
sollen.

Der Informationsbereich links davon (mit dem Avolites-Logo) bietet
Hinweise zum aktuellen Programmierschritt, außerdem werden hier die
letzten Befehle für die Undo-Funktion aufgelistet. Auf dem Diamond 9 befindet sich der Infobereich 
oberhalb der Menütasten im Menü-Touchscreen.

![Prompt Area](/docs/images/System-Area.png)

Am unteren Rand des Touchscreens wird die Funktion der Encoder (Räder) 
angezeigt. Wenn Attribute der Geräte angewählt sind, werden hier die 
geräteweise möglichen Einstellungen aufgelistet. Oberhalb der 
dargestellten Walze befindet sich die Bezeichnung der Attribute, die 
jeder Encoder steuert, in der Mitte der Walze steht der aktuelle Wert. 
Durch Anklicken des oberen oder unteren Teiles der Walze lassen sich 
Attributwerte z.B. auf 0% oder 100% setzen.

Wenn gerade eine Sequenz gesteuert wird (Cueliste bzw. Chaser), so
findet man auf der Walze Informationen darüber.

![Wheels](/docs/images/Wheels-2.png)

Unmittelbar darüber bzw. daneben werden in einer Leiste die
Attributgruppen IPCGBESFX angezeigt: I = Intensity = Helligkeit; P = 
Position; C = Colour = Farbe; G = Gobo; B = Beam = Beeinflussung des 
Lichtstrahls; E = Effect, S = Special, FX = (generierte) Effekte. 
Die ausgewählte Gruppe wird grau hinterlegt, die aktuell veränderte 
dagegen blau.

Die Darstellung der Menütasten variiert mit der jeweils möglichen
Bedienungsoption:

  |   Darstellung   | Bedeutung          |
  |     ---   | ---          |
  |  ![Softkey - Action](/docs/images/Softkey-Action.png)  |  **Aktionstaste** - beim Anklicken wird dieser Befehl ausgeführt   |
  |  ![Softkey - Option](/docs/images/Softkey-Option.png)  |  **Optionstaste** - zum Durchschalten durch eine Anzahl von Optionen   |
  |  ![Softkey - New Menu](/docs/images/Softkey-New-Menu.png)  |  **Neues Menü** - öffnet ein weiteres Menü   |
  |  ![Softkey - Text Entry](/docs/images/Softkey-Text-Entry.png)  |  **Texteingabe** - Taste betätigen, um mit der Tastatur einen Text einzugeben  |

## Die Werkzeugleiste

Auf allen Konsolen außer dem Diamond 9, Diamond 7 und dem Sapphire Touch befindet sich am oberen
Bildschirmrand die Werkzeugleiste.

![Tools Menu](/docs/images/Tools-Menu.png)

Beim Sapphire Touch befindet sich die Werkzeugleiste am Mittelsteg, also
links im rechten sowie rechts im linken Display.

![Sapphire Tools Menu](/docs/images/Sapphire-Tools-Menu.png)

Auf dem Diamond 9/Diamond 7 gibt es statt der Werkzeugleiste einen Button <Keys.ContextKey>Tools</Keys.ContextKey>.
Auf dem D9 ist dieser links oben auf dem rechten Touchscreen. Beim D7-215 (2 Displays) ist dieser oben links auf dem 
linken Touchscreen, beim D7-330 (3 Displays) oben links auf dem mittleren Touchscreen. 
Außerdem gibt es die Taste <Keys.HardKey>Tools</Keys.HardKey> auf der ausziehbaren Tastatur.

![D9 Tools button](/docs/images/Tools-Button-D9.png)

Beim Betätigen der Schaltfläche 'Tools' öffnet sich ein Menü mit Zugriff
auf verschiedene weitere Konfigurationsmöglichkeiten (abhängig vom
Pult):

**About** zeigt Informationen über die Software-Version.

**Help** öffnet das (englische) Online-Handbuch.

**Control Panel** öffnet ein Untermenü mit Einstellungsmöglichkeiten
etwa für den Bildschirm oder die USB Expert-Konsole, die die Verbindung
zwischen der Bedienoberfläche und dem Hauptprozessor herstellt. Der
Punkt 'More...' öffnet die Windows-Systemsteuerung, um die
Systemkonfiguration zu bearbeiten.

**Touch Screen Setup** (in Control Panel) öffnet das 
Einrichtungsprogramm für die Touchscreens, mit dem diese z.B. auch 
kalibriert werden können.

**USB Expert Console** (in Control Panel) ist das Einrichtungsprogramm 
für die Verbindung zwischen Bedienoberfläche und Hauptprozessor. 
Sollten Probleme auftreten, kann man hier hilfreiche Informationen 
für die Fehlersuche finden.

**Folders** öffnet das Dateisystem zum direkten Zugriff. Dies wird u.a.
zum Sichern der Daten sowie zum Updaten benötigt.

**Switch Task** dient zum Umschalten
zwischen mehreren Programmen, und zum Bewegen der Programmfenster auf
den externen Bildschirm. Benutzen Sie das Symbol 'Bildschirm wechseln',
um ein Fenster zwischen Touchscreen und externem Bildschirm hin- und
herzuschalten; 'Zentrieren' zentriert das Fenster auf dem Bildschirm,
'Schließen' schließt das jeweilige Programm.

![Switch Task](/docs/images/Switch-Task.png)

**Switch Software** erlaubt es, zwischen verschiedenen Versionen der
Pult-Software (sofern installiert) umzuschalten. Das kann sinnvoll sein,
um Shows aus älteren Versionen zu laden.

**Additional Programs** dient zum Aufruf einiger Diagnoseprogramme, die
dem Avolites-Support die Fehlersuche ermöglichen.

**Restart** und **Shutdown Software** startet die Titan-Software neu
bzw. schließt sie. Normalerweise benötigt man das nur beim
Programm-Update.

In der Werkzeugleiste befindet sich auch jeweils ein Button zum Aufrufen
der Bildschirmtastatur. Auf dem Diamond 9 gibt es dafür die Taste <Keys.HardKey>Keyboard</Keys.HardKey>.

> Bei der Titan PC Suite (Titan Go, Titan Simulator) gibt es keine Toolbar, da alle diese Funktionen über Windows bzw. die Systemsteuerung zur Verfügung stehen.

## Visualiser

![Visualiser](/docs/images/Capture-Visualiser-Workspace-Window.png)

Ab Titan Version 10 ist Capture als Visualiser in die Software
integriert. Genauere Informationen gibt es im Abschnitt [Capture Visualiser](../capture-visualiser.md).

Mit dem Visualiser erhält man einen realistischen Eindruck von der
jeweiligen Beleuchtungssituation. So lässt sich vorprogrammieren,
Anpassungen vornehmen sowie etwa während der Show per Blind-Modus letzte
Änderungen machen.

## Undo/Redo -- Rückgängig machen/Wiederholen

Im Konsolenbereich des Bildschirms (links neben der Leiste mit den
Menütasten) wird eine Liste der zuletzt ausgeführten
Programmieraktionen angezeigt.

![System Area](/docs/images/System-Area.png)

Klickt man in diesen Bereich, so öffnet sich das History-Fenster mit
einer genaueren Liste, und man kann Aktionen daraus einfach rückgängig
machen.

Die zuletzt ausgeführte Aktion wird im Konsolenbereich fett dargestellt;
im History-Fenster wird sie rot hinterlegt.

![Undo Window](/docs/images/Undo-Window.png)

Klickt man in diesem Fenster nun auf eine der vorherigen Aktionen, so
werden alle Aktionen bis zu dieser rückgängig gemacht. Derart
deaktivierte Aktionen werden ausgegraut dargestellt; klickt man darauf,
so können sie wiederhergestellt werden.

Ebenso kann man mittels Undo/Redo durch die Liste durchschalten (<Keys.HardKey>AVO</Keys.HardKey> + <Keys.HardKey>Undo</Keys.HardKey> bzw. <Keys.HardKey>AVO</Keys.HardKey> + <Keys.HardKey>Redo</Keys.HardKey>; Pfeil-links bzw. Pfeil-rechts
unterhalb des Ziffernblocks auf älteren Pulten).

Einige Aktionen können nicht rückgängig gemacht werden; dies wird durch
ein rotes Verbotszeichen dargestellt.

![Undo Cant Undo](/docs/images/Undo-Cant-Undo.png)

Im Mehrbenutzerbetrieb kann das Fenster eine separate Spalte pro
Benutzer zeigen, mit den jeweils letzten Aktionen des Users. Dazu dient
die Option <Keys.ContextKey>Show All Users and Consoles</Keys.ContextKey> im Kontext-Menü dieses Fensters. 
Als Vorgabe wird mit <Keys.ContextKey>Show Only Current User</Keys.ContextKey> nur der
aktuelle Benutzer angezeigt.
